# eecs476_alpha

./: README.md
final_lab/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml
final_lab/launch/: alpha_final.launch
final_lab/src/: alpha_coordinator.cpp  alpha_coordinator_no_arms.cpp  alpha_lin_steering.cpp  alpha_pub_des_state.cpp  alpha_pub_des_state.h  alpha_pub_des_state_main.cpp  alpha_pub_des_state_path_client.cpp  alpha_steering_algorithm.h  alpha_traj_builder.cpp  gripper_test.cpp
final_lap/: CMakeLists.txt  README.md  package.xml
final_lap/src/: alpha_lin_steering.cpp
lab1alpha/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
lab1alpha/src/: alpha_open_loop_commander.cpp  (+1 more)
lab2alpha/: .~lock.writeup.odt#  CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~  writeup.odt
lab3alpha/: CMakeLists.txt~  README.md  package.xml  package.xml~
lab4alpha/: .~lock.writeup.odt#  CMakeLists.txt~  README.md  package.xml~  writeup.odt
lab6alpha/: .~lock.writeup.odt#  CMakeLists.txt  README.md  README.md~  package.xml  writeup.odt
lab7alpha/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
lab7alpha/include/alpha_traj_builder/: alpha_traj_builder.h~
lab7alpha/src/: alpha_lidar_alarm.cpp  alpha_lin_steering.cpp  alpha_pub_des_state_path_client.cpp  alpha_steering_algorithm.h~  lidar_alarm_improved.cpp~  my_lidar_alarm.cpp~  ps6_des_state_main .cpp~  ps6_lidar_alarm.cpp~  ps6_pub_des_state.cpp~  ps6_pub_des_state.h~  ps6_traj_builder.cpp~
(+23 files in other folders)
